Prevent wrapping in header text

--- a/src/renderer/styles/components/_session-panel.scss
+++ b/src/renderer/styles/components/_session-panel.scss
@@ -4,10 +4,6 @@
     justify-content: space-between;
   }
 
-  @include element(header-text) {
-    margin-bottom: 0;
-  }
-
   @include element(header-count) {
     margin-left: 0.5rem;
   }
